[package]
name = "plum"
version = "0.1.0"
authors = ["onatm <onatmercan@gmail.com>"]
description = "Probabilistic data structures for rust"
documentation = "https://docs.rs/plum"
homepage = "https://github.com/distrentic/plum"
repository = "https://github.com/distrentic/plum"
readme = "README.md"
keywords = ["bloom-filter", "bloomfilter", "bloom", "filter", "probabilistic"]
license = "MIT"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bit-vec = "0.6"